--- a/style.css
+++ b/style.css
@@ -2,19 +2,28 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    height: 100vh;
     margin: 0;
 
     font-family: "Roboto", sans-serif;
+}
+
+body > div {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    flex-grow: 1;
+}
+
+.header,
+.hero {
+    background-color: #1F2937;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100vw;
-
-    background-color: #1F2937;
 }
 
 .header-logo {
