--- a/style.css
+++ b/style.css
@@ -34,8 +34,16 @@ body > div {
     align-items: center;
 }
 
+.left-content {
+    margin-left: 15vw;
+}
+
+.right-content {
+    margin-right: 15vw;
+}
+
 .header-logo {
-    margin-left: 150px;
+    margin-left: 15vw;
 
     font-size: 24px;
 }
@@ -43,7 +51,7 @@ body > div {
 .header-links {
     display: flex;
     gap: 18px;
-    margin-right: 150px;
+    margin-right: 15vw;
 
     list-style: none;
     font-size: 18px;
