--- a/style.css
+++ b/style.css
@@ -117,4 +117,41 @@ a {
     align-content: center;
 }
 
+
 /* Content one */
+
+.content-one {
+    flex-direction: column;
+    padding-bottom: 75px;
+}
+
+.content-one h1 {
+    margin: 40px auto;
+}
+
+.card-container {
+    display: flex;
+    justify-content: space-around;
+    box-sizing: border-box;
+    width: calc(100% - 30vw);
+}
+
+.card {
+    text-align: center;
+    width: 200px;
+}
+
+.card .box {
+    width: 200px;
+    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+
+    border: 4px solid #3882F6;
+    border-radius: 19px;
+}
+
+.card .subtext {
+    font-size: 16px;
+    color: #2c2c2c;
+}
