--- a/style.css
+++ b/style.css
@@ -160,3 +160,30 @@ a {
     font-size: 16px;
     color: #2c2c2c;
 }
+
+
+/* Content two */
+
+.content-two {
+    padding-top: 95px;
+
+    background-color: #E5E7EB;
+}
+
+.quote {
+    margin: auto 10%;
+
+    font-size: 36px;
+    font-weight: light;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.quote-source {
+    text-align: end;
+    margin-right: 10%;
+    margin-top: 0px;
+
+    font-size: 22px;
+    font-weight: bold;
+}
